Updating text styles for mobile view. Fixed contact form cursor position on iOS

--- a/source/assets/stylesheets/pages/_main.scss
+++ b/source/assets/stylesheets/pages/_main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400');
+@import url('https://fonts.googleapis.com/css?family=Lato:100,200,300');
 
 $accented: rgb(68,247,255);
 
@@ -51,9 +51,7 @@ a, img {
 }
 
 .nav-menu {
-  //box-shadow: 0px 8px 20px rgba(0,0,0,0.3);
   button {
-    //background-color:rgba(0,0,0,0.3);
     border:none;
     font-weight: 300;
     font-size: 1.2em;
@@ -177,6 +175,9 @@ input[name='_gotcha'] {
     transform: translateY(-100%);
 }
 
+.position-fixed {
+  position: fixed;
+}
 
 // BootStrap overrides
 
@@ -192,6 +193,10 @@ input[name='_gotcha'] {
 }
 .navbar-dark {
   background-color: rgba(0,0,0, 0.5);
+}
+
+.navbar-dark--open {
+  background-color: rgba(0,0,0, 0.7);
 }
 
 .navbar, ul, li, a, button, img {
