--- a/source/assets/stylesheets/pages/_responsive.scss
+++ b/source/assets/stylesheets/pages/_responsive.scss
@@ -11,8 +11,22 @@
   }
 
   h1 {
-    font-size: 1.4em;
-    font-weight: 300;
+    font-size: 2.5em;
+    text-shadow: 0px 2px 4px rgba(0,0,0,0.2);
   }
 
+  ul.services {
+    & > li {
+      font-weight: 300;
+      font-size: 1em;
+      letter-spacing: 1px;
+      word-spacing: 4px;
+      margin-bottom: 2.5em;
+    }
+    &.services-sm {
+      li {
+        margin-bottom: 1.2em;
+      }
+    }
+  }
 }
